@@ -606,6 +606,7 @@ struct ast_sw *ast_walk_context_switches(struct ast_context *con, struct ast_sw 
 
 int pbx_builtin_serialize_variables(struct ast_channel *chan, char *buf, size_t size);
 extern char *pbx_builtin_getvar_helper(struct ast_channel *chan, const char *name);
+extern void pbx_builtin_pushvar_helper(struct ast_channel *chan, const char *name, const char *value);
 extern void pbx_builtin_setvar_helper(struct ast_channel *chan, const char *name, const char *value);
 extern void pbx_retrieve_variable(struct ast_channel *c, const char *var, char **ret, char *workspace, int workspacelen, struct varshead *headp);
 extern void pbx_builtin_clear_globals(void);
